<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.karlnicholas.legalservices</groupId>
	<artifactId>parent</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Legal Services</name>
	<description>Legal Services</description>
	<modules>
		<module>Statutes</module>
		<module>StatutesService</module>
		<module>StatutesServer</module>
		<module>GuidedSearchCore</module>
		<module>StatutesCa</module>
		<module>StatutesRestCa</module>
		<module>OpinionsCore</module>
		<module>OpinionsCoreService</module>
		<module>OpinionsWeb</module>
		<module>LoadOpinions</module>
		<module>LoadSlipOpinions</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.4.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- Define the version of the WAR so that we don't need to repeat ourselves 
				in every module -->
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statutes</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statutesservice</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statutes-server</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>statutesca</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>guidedsearch-core</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinions-core</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>opinions-core-service</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.github.karlnicholas.legalservices</groupId>
				<artifactId>loadopinions</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>   <!-- maven.compiler.source -->
					<target>11</target> <!-- maven.compiler.target -->
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>